describing openTab
